fix(CSS): made search bar input text more visible

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -55,13 +55,13 @@
 
 .top-search-input {
   border-radius: 1.5rem;
-  font-size: 0.65rem;
+  font-size: 0.8rem;
   width: 38vw;
   background-color: rgba(67, 70, 81, 0.3);
   border-color: rgba(67, 70, 81, 0.6);
-  color: #434651;
+  color: #d0d3db;
   font-weight: bold;
-  padding: 0.3rem;
+  padding: 0.2rem;
   padding-left: 1rem;
   transition: background-color 0.3s ease, border-color 0.3s ease;
 }
